dnl Process this file with autoconf to produce a configure script.
AC_INIT(priv.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs
dnl ===================
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(SU_PROG, su)
AC_DEFINE_UNQUOTED(PATH_SU, "$SU_PROG")

dnl Checks for libraries
dnl ====================

dnl Checks for header files
dnl =======================
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(limits.h stdarg.h stdlib.h string.h stringlist.h syslog.h \
	unistd.h sys/syslog.h)

dnl Checks for typedefs, structures, and compiler characteristics
dnl =============================================================
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions
dnl ============================
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd getwd getdtablesize syslog)
AC_REPLACE_FUNCS(err strdup strsep strerror strspn strtoul)

AC_OUTPUT(Makefile)
